# VCBrain-Maschmeyer-x-Hacknation

./: .env.example  .gitignore  GPT-braindump.md  README.md  pyproject.toml
apps/web/: README.md  package-lock.json  package.json  proxy.ts
apps/web/app/: AsciiWave.tsx  AssistantChat.module.css  AssistantChat.tsx  AuthProvider.tsx  GlobalIntelligenceMap.module.css  GlobalIntelligenceMap.tsx  IskraOrb.module.css  IskraOrb.tsx  OpportunityModal.module.css  OpportunityModal.tsx  Sidebar.tsx  SignalLoading.module.css  SignalLoading.tsx  SourcingInbox.tsx  SourcingMap.module.css  SourcingMap.tsx  globals.css  layout.module.css  layout.tsx  page.module.css  page.tsx
apps/web/lib/: api.ts  assistant.ts  auth-token.ts  errors.ts  memo.ts  scoring.ts  thesis.ts  use-dismissable-layer.ts  user.ts  voice-recorder.ts
data/samples/: founders.json
docs/: INTRO.md  README.md  api-reference.md  architecture.md  clerk-integration.md  collaboration-api.md  decision-flight-recorder.md  demo-walkthrough.md  enterprise-iam.md  founder-passport.md  llm-prompts.md  outcome-simulator-api.md  person-a-contract.md  person-b-contract.md  pitch-script.md  product-status.md  ui-backend-audit.md  voice-mode.md
docs/demo-fixtures/: MANUAL_E2E_TEST.md  aethergrid-customer-reference.md  aethergrid-financials.csv  aethergrid-founder-background.md  aethergrid-market-note.md  aethergrid-pitch-deck.md  northstar-founder-note.md
scripts/: seed_demo.py
services/api/: README.md  requirements.txt
tests/: test_api_smoke.py  test_collaboration.py  test_discovery.py  test_outcomes.py
(+42 files in other folders)
