[project]
name = "vcbrain-maschmeyer-hacknation"
version = "0.1.0"
description = "AI-first VC operating system hackathon prototype."
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "python-multipart",
  "pypdf",
  "python-docx",
  "python-pptx",
]

[dependency-groups]
dev = [
  "httpx2",
  "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

